# appstream_dart

./: .clang-format  .clang-tidy  .gitignore  .pubignore  AUDIT_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  FIX_DART_TEST.md  IMPLEMENTATION_INDEX.md  LICENSE  Makefile  NEXT_STEPS_COMPLETE.md  README.md  THIRD_PARTY_LICENSES  analysis_options.yaml  build.sh  pubspec.yaml  run_tests.sh  test_advanced_features.sh
.github/workflows/: build-and-test.yml  ci.yml
build-verify/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
build-verify/tests/: CTestTestfile.cmake  Makefile  appstream_tests[1]_include.cmake  cmake_install.cmake
doc/: ADVANCED_BUILD.md  ARCHITECTURE.md  BUILD_SYSTEM.md  CODE_AUDIT_REPORT.md  COMPLETE_SUMMARY.md  RUNNING_TESTS.md  TEST_SUMMARY.md
docs/: ADVANCED_BUILD.md  ARCHITECTURE.md  BUILD_SYSTEM.md  COMPLETE_SUMMARY.md  RUNNING_TESTS.md  TEST_SUMMARY.md
example/: example.dart
example/flathub_catalog/: README.md  pubspec.yaml
example/flathub_catalog/lib/: main.dart
example/flathub_catalog/lib/screens/: catalog_screen.dart  detail_screen.dart  setup_screen.dart
example/flathub_catalog/lib/services/: catalog_service.dart
example/flathub_catalog/lib/widgets/: app_card.dart  app_icon.dart
example/flathub_catalog/linux/: CMakeLists.txt
example/flathub_catalog/linux/runner/: my_application.cc
example/flathub_catalog/test/: widget_test.dart
hook/: build.dart
include/: AppStreamParser.h  Component.h  ComponentSink.h  SqliteWriter.h  StringPool.h  XmlScanner.h  appstream_ffi.h  dart_api_dl.h  dart_api_types.h  expected_polyfill.h  spdlog.h
lib/: appstream.dart  appstream_dart.dart
lib/src/: appstream_native.dart  bindings.dart
lib/src/database/: database.dart  database.g.dart  tables.dart
native_tests/: CMakeLists.txt  benchmark_parser.cpp  test_appstream_parser.cpp  test_component.cpp  test_helpers.h  test_real_appstream_data.cpp  test_sqlite_writer.cpp  test_string_pool.cpp  test_xml_scanner.cpp
scripts/: test.sh
src/: AppStreamParser.cpp  Component.cpp  SqliteWriter.cpp  StringPool.cpp  XmlScanner.cpp  appstream_ffi.cpp  dart_api_dl.c  dart_api_dl.cpp  dart_api_dl_impl.c
test/: appstream_integration_test.dart  appstream_parse_fallback_test.dart  appstream_uninit_test.dart  model_test.dart
tests/: benchmark_parser.cpp  test_appstream_parser.cpp  test_helpers.h  test_real_appstream_data.cpp  test_string_pool.cpp  test_xml_scanner.cpp
